# latex_perf

./: .CoqMakefile.d  .Makefile.coq.d  .gitattributes  .gitignore  .gitmessage  .lia.cache  .ocamlformat  .ocamlformat-ignore  .pre-commit-config.yaml  100k_results.txt  ADMITS_ANALYSIS.md  ARCHITECTURAL_REALITY_CHECK.md  ARCHITECTURE.md  AXIOM_ELIMINATION_ANALYSIS.md  AXIOM_ELIMINATION_SUCCESS_REPORT.md  BUILD_SUCCESS_VERIFICATION.sh  CATASTROPHIC_PERFORMANCE_FAILURE_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_DAMAGE_ASSESSMENT.md  COMPREHENSIVE_CLEANUP_PLAN.md  COMPREHENSIVE_CLEANUP_PLAN.sh  COMPREHENSIVE_PROJECT_AUDIT.md  CRYSTAL_CLEAR_BUILD_REQUIREMENTS.md  CURRENT_V25_STATUS.md  DOCUMENTATION_CONSISTENCY_FINAL.md  DUNE_FIX_README.md  Dockerfile  Dockerfile.spacy  FINAL_100K_NO_ROTATION.txt  FINAL_ULTRAUDIT_REPORT.md  FOOLPROOF_PERFORMANCE_TEST.sh  HELP_AI.md  IMPLEMENTATION_SUMMARY.md  L0_L1_L2_FOUNDATION_AUDIT_REPORT.md  L2_IMPLEMENTATION_COMPLETE.md  L2_IMPLEMENTATION_REALITY_CHECK.md  L2_PARSER_DESIGN.md  LICENSE  Makefile  (+114 more)
bench/workers/: dune  latex_perfectionist_lockfree_worker.ml  latex_perfectionist_native_worker.ml  latex_perfectionist_resident_worker.ml  latex_perfectionist_resident_worker_l0.ml  latex_perfectionist_resident_worker_l0_l1.ml  latex_perfectionist_sidecar_worker.ml  latex_perfectionist_streaming_worker.ml  latex_perfectionist_threaded_worker.ml  latex_perfectionist_worker.ml  latex_perfectionist_worker_optimized.ml
core/l0_lexer/: alloc_guard.ml  alloc_guard.mli  arena.ml  arena.mli  barrier.ml  barrier.mli  bench_dune  bench_dune.disabled  broker.ml  broker.mli  catcode.ml  catcode.mli  clock.ml  clock.mli  clock_stubs.c  config.ml  config.mli  current_baseline_performance.json  dune  fast_hash.ml  fast_hash.mli  fault_injection.ml  fault_injection.mli  fd_util.ml  fd_util.mli  fd_util_stubs.c  gc_prep.ml  gc_prep.mli  hedge_timer.ml  hedge_timer.mli  hedge_timer_stubs.c  incremental_lexer.ml  incremental_lexer.mli  ipc.ml  ipc.mli  latex_parse_lib.ml  latex_parse_lib.mli  lexer_v25.ml  lexer_v25.mli  main.ml  (+42 more)
core/l1_expander/: catalogue.json  catalogue_loader.ml  check_catalogue.ml  dune  dune.disabled  expander.ml  expander_smoke.ml  l1_ab_api.ml  l1_ab_test.ml  l1_integration_test.ml  l1_zero_copy_expansion.ml  load_catalogue.ml  load_catalogue_stub.ml  load_catalogue_unified.ml  load_catalogue_v3.ml  macro_catalogue.argsafe.schema.json  macro_catalogue.argsafe.v25r1.json  macro_catalogue.json  macro_catalogue.schema.json  simple_expander.ml  simple_expander_test.ml
latex-parse/: dune-project  latex_parse.opam
latex-parse/bench/: ab_microbench.ml  catcode_selftest.ml  dune  edit_replay_bench.ml  edit_window_bench.ml  first_token_latency.ml  hash_throughput.ml  ipc_propcheck.ml  percentiles_strict.ml  run_service_bench_concurrent.ml  run_service_bench_keepalive.ml  simd_vs_scalar_bench.ml  time_selftest.ml  xxh_selfcheck.ml
latex-parse/bench_classify/: classify_bench.ml  dune
latex-parse/data/: macro_catalogue.argsafe.v25r1.json  macro_catalogue.v25r2.json
latex-parse/scripts/: bench_compile_check.sh
latex-parse/src/: arena.ml  arena.mli  ast_semantic_state.ml  aux_state.ml  aux_state.mli  barrier.ml  barrier.mli  bench_readiness_kernel.ml  broker.ml  broker.mli  build_artifact_state.ml  build_artifact_state.mli  build_graph.ml  build_graph.mli  build_profile.ml  build_profile.mli  cache_key.ml  cache_key.mli  catcode.ml  catcode.mli  chunk_store.ml  chunk_store.mli  clock.ml  clock.mli  clock_stubs.c  compile_contract.ml  compile_contract.mli  compile_evidence.ml  compile_evidence.mli  compile_gate_checks.ml  compile_gate_checks.mli  compile_guarantee_extracted.ml  config.ml  config.mli  cst.ml  cst.mli  cst_edit.ml  cst_edit.mli  cst_of_ast.ml  cst_of_ast.mli  (+341 more)
src/core/: L1_IMPLEMENTATION_STATUS.md  README.md  c_flags.sexp  catcode_simd_bridge.ml  common_macros.ml  core.ml  core.mli  dsl_compiler.ml  dune  expander_stub.ml  extraction.v  ground_truth.ml  l0_lexer.ml  l0_lexer.mli  l0_lexer_track_a_arena.ml  l0_lexer_track_a_arena_fixed.ml  l0_lexer_track_a_arena_standalone.ml  l0_lexer_track_a_enhanced.ml  l0_lexer_track_a_perfect.ml  l0_lexer_track_a_simd.ml  l0_lexer_track_a_ultra.ml  l0_lexer_track_a_ultra_v2.ml  l0_lexer_track_a_ultra_v3.ml  l0_lexer_track_a_ultra_v3_fixed.ml  l0_v25.ml  l1_expander.ml  l1_expander.mli  l1_macro_validator.ml  l1_v25_packed.ml  l2_parser.ml  l2_parser.mli  layer0_interface.ml  lexer_stub.ml  lexer_v25.ml  lexer_v25.mli  lexer_verified.ml  orchestrator.ml  orchestrator_full.ml.disabled  perf_audit  perf_audit.ml  (+19 more)
src/validators/: CLEANUP_WRONG_IMPLEMENTATIONS.md  CLEAN_STATE_VERIFIED.md  COMPLETE_SPECIFICATION_AUDIT.md  CORRECTED_PERFORMANCE_REPORT.md  FINAL_HONEST_RESULTS.md  FINAL_PERFORMANCE_SUMMARY.md  IMPLEMENTATION_AUDIT.md  OPTIMIZATION_SUCCESS_FINAL.md  PERFORMANCE_AUDIT_TRUTH.md  PERFORMANCE_FIX_COMPLETE.md  PERFORMANCE_REALITY_CHECK.md  PLANNER_COMPLIANT_VALIDATOR_SYSTEM.md  ROADMAP_SYSTEMATIC_IMPLEMENTATION.md  ULTRA_AUDIT_CLEANUP_PLAN.md  ULTRA_AUDIT_REPORT_2025_08_17.md  UPDATED_AI_HANDOFF_VALIDATOR_SUCCESS.md  complete_specification_validators.ml  complete_typo_validators.ml  dag_system_complete  dag_system_complete.ml  dune  enhanced_validation_system.ml  false_positive_measurement.cmo  false_positive_measurement.ml  l0_real_fusion.ml  (+38 more)
test/: README.md  dune  golden_output_test.ml  simd_scalar_property_harness.ml  test_1mb_actual.ml  test_1mb_performance.ml  test_actual_1mb.ml  test_basic.ml  test_catcode.ml  test_catcode_simple.ml  test_complete_system.ml  test_comprehensive_week1.ml  test_core_working.ml  test_edge_cases.ml  test_gap_fixes.ml  test_integration_details.ml  test_l0_l1_pipeline.ml  test_l1_expander.ml  test_l2_parser.ml  test_lexer_correctness.ml  test_macro_catalog.ml  test_minimal_perf.ml  test_production_lexers.ml  test_track_a_real.ml  test_ultra_v2.ml  test_unicode.ml  test_unicode_complete.ml  test_v25_complete.ml  test_v25_simple.ml  test_validator_dsl.ml  test_week1_simple_functional.ml  test_week2_comprehensive.ml  test_week2_simple.ml  test_week48_simd.ml
(+2792 files in other folders)
