(lang dune 3.10)
(name latex_parse)
(generate_opam_files true)

(package
 (name latex_parse)
 (synopsis "Core tokenizer and validator service for LaTeX Perfectionist")
 (maintainers "Clan Maintainers <maintainers@clan.dev>")
 (authors "Clan Labs")
 (homepage "https://github.com/ClanClanClanClan/latex_perf")
 (bug_reports "https://github.com/ClanClanClanClan/latex_perf/issues")
 (depends
  (ocaml (>= 5.1.1))
  (dune (>= 3.10))
  (uutf (>= 1.0.3))
  (yojson (>= 2.1))))