(executable
 (public_name test_production_lexers)
 (name test_production_lexers)
 (modules test_production_lexers)
 (libraries core data unix))

(executable
 (name test_lexer_correctness)
 (modules test_lexer_correctness)
 (libraries core data unix))

(executable
 (name test_minimal_perf)
 (modules test_minimal_perf)
 (libraries core data))

(executable
 (name test_1mb_performance)
 (modules test_1mb_performance)
 (libraries core data unix))

(executable
 (name test_unicode_complete)
 (modules test_unicode_complete)
 (libraries core data unix))

(executable
 (name test_v25_complete)
 (modules test_v25_complete)
 (libraries core data unix))

(executable
 (name golden_output_test)
 (modules golden_output_test)
 (libraries core data unix))

(executable
 (name test_ultra_v2)
 (modules test_ultra_v2)
 (libraries core data unix))

(executable
 (name test_week48_direct)
 (modules test_week48_direct)
 (libraries core data unix))

(executable
 (name test_1mb_actual)
 (modules test_1mb_actual)
 (libraries core data unix))