(executables
 (public_names 
   latex_perfectionist_worker
   latex_perfectionist_worker_optimized)
 (names
   latex_perfectionist_worker
   latex_perfectionist_worker_optimized)
 (libraries unix))

; Other experimental workers - not built by default
(executables
 (names
   latex_perfectionist_lockfree_worker
   latex_perfectionist_native_worker
   latex_perfectionist_resident_worker
   latex_perfectionist_resident_worker_l0
   latex_perfectionist_resident_worker_l0_l1
   latex_perfectionist_sidecar_worker
   latex_perfectionist_streaming_worker
   latex_perfectionist_threaded_worker)
 (libraries unix threads)
 (modes byte exe)
 (optional))