(executable
 (name ab_microbench)
 (modules ab_microbench percentiles_strict)
 (libraries unix latex_parse_lib))

(executable
 (name run_service_bench_concurrent)
 (modules run_service_bench_concurrent percentiles_strict)
 (libraries unix threads latex_parse_lib))

(executable
 (name ipc_propcheck)
 (modules ipc_propcheck)
 (libraries unix latex_parse_lib))

(executable
 (name time_selftest)
 (modules time_selftest)
 (libraries unix latex_parse_lib))