(library
 (name latex_parse_lib)
 (public_name latex_parse)
 (modules
  config
  clock
  hedge_timer
  mlock
  meminfo
  gc_prep
  pretouch
  arena
  ipc
  simd_guard
  real_processor
  worker
  broker
  service_bracket
  metrics_prometheus
  fault_injection
  barrier
  fast_hash
  xxh64
  service_payload
  catcode
  validators_context
  validators
  validators_metrics
  tokenizer_lite
  unicode
  parser_l2
  fd_util
  net_io
  macro_catalogue)
 (libraries unix threads str uutf yojson)
 (foreign_stubs
  (language c)
  (names
   clock_stubs
   hedge_timer_stubs
   mlock_stubs
   meminfo_stubs
   simd_guard_stubs
   simd_production_stubs
   simd_tokenizer_fixed
   xxh64_simd_stubs
   fd_util_stubs)
  (flags (:standard)))
 ;; --- macOS force-load of static SIMD library to avoid dead-stripping ---
 ;; DISABLED: _Caml_state symbol incompatibility with OCaml 5.x FFI.
 ;; Tracked as Risk T-4 in specs/v25_R1/L0_LEXER_SPEC_v25_R1.md ยง11.
 ;; SIMD path is informational-only (Tier B); scalar path meets all SLAs.
 ;; (c_library_flags
 ;;  (-Wl,-force_load,<PROJECT_ROOT>/core/l0_lexer/simd/libsimd_production.a))
 )

(executable
 (name main_service)
 (modules main_service)
 (libraries latex_parse_lib unix threads))

(test
 (name test_simd_attestation)
 (modules test_simd_attestation)
 (libraries latex_parse_lib))

(test
 (name test_fault_injection)
 (modules test_fault_injection)
 (libraries latex_parse_lib unix threads))

(executable
 (name rest_api_server)
 (modules rest_api_server rest_simple_expander)
 (libraries latex_parse_lib unix threads str yojson))

(executable
 (name validators_cli)
 (modules validators_cli)
 (libraries latex_parse_lib))

(test
 (name test_strip_math)
 (modules test_strip_math)
 (libraries latex_parse_lib))

(test
 (name test_tokenizer_props)
 (modules test_tokenizer_props)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2)
 (modules test_parser_l2)
 (libraries latex_parse_lib))

(test
 (name test_strip_math_prop)
 (modules test_strip_math_prop)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_prop)
 (modules test_parser_l2_prop)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_transforms)
 (modules test_parser_l2_transforms)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_opts_escapes)
 (modules test_parser_l2_opts_escapes)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_norm)
 (modules test_parser_l2_norm)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_verb)
 (modules test_parser_l2_verb)
 (libraries latex_parse_lib))

(test
 (name test_service_payload)
 (modules test_service_payload)
 (libraries latex_parse_lib))

(test
 (name test_net_io)
 (modules test_net_io)
 (libraries latex_parse_lib unix threads))

(test
 (name test_fd_util)
 (modules test_fd_util)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_context)
 (modules test_validators_context)
 (libraries latex_parse_lib unix threads))

(test
 (name test_service_bracket)
 (modules test_service_bracket)
 (libraries latex_parse_lib unix))

(test
 (name test_barrier)
 (modules test_barrier)
 (libraries latex_parse_lib unix threads))

(test
 (name test_validators_metrics)
 (modules test_validators_metrics)
 (libraries latex_parse_lib unix str))

(test
 (name test_config)
 (modules test_config)
 (libraries latex_parse_lib))

(test
 (name test_hedge_timer)
 (modules test_hedge_timer)
 (libraries latex_parse_lib unix))

(test
 (name test_mlock_smoke)
 (modules test_mlock_smoke)
 (libraries latex_parse_lib unix))

(test
 (name test_meminfo_smoke)
 (modules test_meminfo_smoke)
 (libraries latex_parse_lib unix))

(test
 (name test_gc_prep_smoke)
 (modules test_gc_prep_smoke)
 (libraries latex_parse_lib unix))

(test
 (name test_pretouch_smoke)
 (modules test_pretouch_smoke)
 (libraries latex_parse_lib unix bigarray))

(test
 (name test_fast_hash)
 (modules test_fast_hash)
 (libraries latex_parse_lib))

(test
 (name test_unicode)
 (modules test_unicode)
 (libraries latex_parse_lib))

(test
 (name test_arena)
 (modules test_arena)
 (libraries latex_parse_lib bigarray))

(test
 (name test_metrics_prometheus)
 (modules test_metrics_prometheus)
 (libraries latex_parse_lib unix))

(test
 (name test_macro_catalogue)
 (modules test_macro_catalogue)
 (libraries latex_parse_lib)
 (deps
  ../data/macro_catalogue.v25r2.json
  ../data/macro_catalogue.argsafe.v25r1.json))

(test
 (name test_validators_enc_char_spc)
 (modules test_validators_enc_char_spc)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_batch2)
 (modules test_validators_batch2)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_typo)
 (modules test_validators_typo)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_verb_cjk_cmd)
 (modules test_validators_verb_cjk_cmd)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_batch5)
 (modules test_validators_batch5)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_locale)
 (modules test_validators_locale)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_l1)
 (modules test_validators_l1)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_delim)
 (modules test_validators_delim)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_script)
 (modules test_validators_script)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_math_l1)
 (modules test_validators_math_l1)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_math_l1b)
 (modules test_validators_math_l1b)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_ref)
 (modules test_validators_ref)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_chem)
 (modules test_validators_chem)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_stragglers)
 (modules test_validators_stragglers)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_stragglers2)
 (modules test_validators_stragglers2)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_stress)
 (modules test_validators_stress)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_math_c1)
 (modules test_validators_math_c1)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_math_c2)
 (modules test_validators_math_c2)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_math_c3)
 (modules test_validators_math_c3)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_cli)
 (modules test_validators_cli)
 (libraries latex_parse_lib unix)
 (deps validators_cli.exe))

(test
 (name test_expansion_pipeline)
 (modules test_expansion_pipeline rest_simple_expander)
 (libraries latex_parse_lib unix yojson))

(test
 (name test_golden_corpus)
 (modules test_golden_corpus rest_simple_expander)
 (libraries latex_parse_lib unix yojson)
 (deps
  ../../specs/rules/l1_golden.yaml
  ../../specs/rules/pilot_v1_golden.yaml
  ../../specs/rules/unicode_golden.yaml
  ../../specs/rules/locale_golden.yaml
  ../../specs/rules/stragglers2_golden.yaml
  ../../specs/rules/l2_approx_golden.yaml
  (source_tree ../../corpora)))

(test
 (name test_validators_math_gap)
 (modules test_validators_math_gap)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_expl3)
 (modules test_validators_expl3)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_l2_approx)
 (modules test_validators_l2_approx)
 (libraries latex_parse_lib unix))
