(library
 (name latex_parse_lib)
 (public_name latex_parse)
 (modules
  config
  clock
  hedge_timer
  mlock
  meminfo
  gc_prep
  pretouch
  arena
  ipc
  simd_guard
  real_processor
  worker
  broker
  service_bracket
  metrics_prometheus
  fault_injection
  barrier
  fast_hash
  xxh64
  service_payload
  catcode
  validators_context
  re_compat
  validators_common
  language_detect
  unsupported_feature
  language_profile
  validators_l0_typo
  validators_l0
  validators_l1_math
  validators_l2
  validators_l4_style
  validators_l1
  validators_l1_expl3
  file_context
  png_reader
  jpeg_reader
  pdf_reader
  font_reader
  file_analyzer
  validators_l3_file
  chunk_store
  edf_scheduler
  ml_client
  validators
  validators_metrics
  tokenizer_lite
  unicode
  parser_l2
  fd_util
  net_io
  macro_catalogue
  user_macro_registry
  user_macro_context
  include_resolver
  project_graph
  project_state
  project_context
  validators_project
  log_parser
  build_profile
  build_artifact_state
  execution_class
  execution_policy
  partial_cst
  error_recovery
  partial_context
  validators_partial
  semantic_edges
  dependency_graph
  invalidation
  validator_dag
  layer_sync
  semantic_state
  sentence_split
  event_bus
  evidence_scoring
  cache_key
  float_tracking
  suffix_array
  section_rebalance
  lockfree_queue
  unicode_split
  incremental_nlp)
 (libraries unix threads re uutf yojson)
 (foreign_stubs
  (language c)
  (names
   clock_stubs
   hedge_timer_stubs
   mlock_stubs
   meminfo_stubs
   simd_guard_stubs
   simd_production_stubs
   simd_tokenizer_fixed
   xxh64_simd_stubs
   fd_util_stubs)
  (flags (:standard)))
 ;; --- macOS force-load of static SIMD library to avoid dead-stripping ---
 ;; DISABLED: _Caml_state symbol incompatibility with OCaml 5.x FFI.
 ;; Tracked as Risk T-4 in specs/v25_R1/L0_LEXER_SPEC_v25_R1.md §11.
 ;; SIMD path is informational-only (Tier B); scalar path meets all SLAs.
 ;; (c_library_flags
 ;;  (-Wl,-force_load,<PROJECT_ROOT>/core/l0_lexer/simd/libsimd_production.a))
 )

(library
 (name test_helpers)
 (modules test_helpers)
 (libraries latex_parse_lib unix))

(library
 (name test_binary_gen)
 (modules test_binary_gen)
 (libraries latex_parse_lib)
 (flags
  (:standard -w -26-27)))

(executable
 (name main_service)
 (modules main_service)
 (libraries latex_parse_lib unix threads))

(test
 (name test_simd_attestation)
 (modules test_simd_attestation)
 (libraries latex_parse_lib))

(test
 (name test_fault_injection)
 (modules test_fault_injection)
 (libraries latex_parse_lib unix threads))

(library
 (name rest_simple_expander_lib)
 (wrapped false)
 (modules rest_simple_expander)
 (libraries latex_parse_lib))

(executable
 (name rest_api_server)
 (modules rest_api_server rest_http rest_handlers)
 (libraries latex_parse_lib rest_simple_expander_lib unix threads yojson))

(executable
 (name validators_cli)
 (modules validators_cli)
 (libraries latex_parse_lib))

(test
 (name test_strip_math)
 (modules test_strip_math)
 (libraries latex_parse_lib))

(test
 (name test_tokenizer_props)
 (modules test_tokenizer_props)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2)
 (modules test_parser_l2)
 (libraries latex_parse_lib))

(test
 (name test_strip_math_prop)
 (modules test_strip_math_prop)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_prop)
 (modules test_parser_l2_prop)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_transforms)
 (modules test_parser_l2_transforms)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_opts_escapes)
 (modules test_parser_l2_opts_escapes)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_norm)
 (modules test_parser_l2_norm)
 (libraries latex_parse_lib))

(test
 (name test_parser_l2_verb)
 (modules test_parser_l2_verb)
 (libraries latex_parse_lib))

(test
 (name test_service_payload)
 (modules test_service_payload)
 (libraries latex_parse_lib))

(test
 (name test_net_io)
 (modules test_net_io)
 (libraries latex_parse_lib unix threads))

(test
 (name test_fd_util)
 (modules test_fd_util)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_context)
 (modules test_validators_context)
 (libraries latex_parse_lib test_helpers unix threads))

(test
 (name test_service_bracket)
 (modules test_service_bracket)
 (libraries latex_parse_lib unix))

(test
 (name test_barrier)
 (modules test_barrier)
 (libraries latex_parse_lib unix threads))

(test
 (name test_validators_metrics)
 (modules test_validators_metrics)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_config)
 (modules test_config)
 (libraries latex_parse_lib))

(test
 (name test_hedge_timer)
 (modules test_hedge_timer)
 (libraries latex_parse_lib unix))

(test
 (name test_infra_smoke)
 (modules test_infra_smoke)
 (libraries latex_parse_lib test_helpers unix bigarray))

(test
 (name test_fast_hash)
 (modules test_fast_hash)
 (libraries latex_parse_lib))

(test
 (name test_unicode)
 (modules test_unicode)
 (libraries latex_parse_lib))

(test
 (name test_arena)
 (modules test_arena)
 (libraries latex_parse_lib bigarray))

(test
 (name test_metrics_prometheus)
 (modules test_metrics_prometheus)
 (libraries latex_parse_lib unix))

(test
 (name test_language_detect)
 (modules test_language_detect)
 (libraries latex_parse_lib))

(test
 (name test_macro_catalogue)
 (modules test_macro_catalogue)
 (libraries latex_parse_lib)
 (deps
  ../data/macro_catalogue.v25r2.json
  ../data/macro_catalogue.argsafe.v25r1.json))

(test
 (name test_user_macro_registry)
 (modules test_user_macro_registry)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_include_resolver)
 (modules test_include_resolver)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_partial_cst)
 (modules test_partial_cst)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_semantic_edges)
 (modules test_semantic_edges)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_dependency_graph)
 (modules test_dependency_graph)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_invalidation)
 (modules test_invalidation)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_project_graph)
 (modules test_project_graph)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_project_state)
 (modules test_project_state)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_user_macro_expansion)
 (modules test_user_macro_expansion)
 (libraries latex_parse_lib test_helpers unix)
 (deps
  ../data/macro_catalogue.v25r2.json
  ../data/macro_catalogue.argsafe.v25r1.json))

(test
 (name test_validators_user_macro)
 (modules test_validators_user_macro)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_enc_char_spc)
 (modules test_validators_enc_char_spc)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_batch2)
 (modules test_validators_batch2)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_typo)
 (modules test_validators_typo)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_verb_cjk_cmd)
 (modules test_validators_verb_cjk_cmd)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_batch5)
 (modules test_validators_batch5)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_locale)
 (modules test_validators_locale)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_l1)
 (modules test_validators_l1)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_delim)
 (modules test_validators_delim)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_script)
 (modules test_validators_script)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_math)
 (modules test_validators_math)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_ref)
 (modules test_validators_ref)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_chem)
 (modules test_validators_chem)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_stragglers)
 (modules test_validators_stragglers)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_stragglers2)
 (modules test_validators_stragglers2)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_stress)
 (modules test_validators_stress)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_conflict)
 (modules test_validators_conflict)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_cli)
 (modules test_validators_cli)
 (libraries latex_parse_lib test_helpers unix)
 (deps validators_cli.exe))

(test
 (name test_expansion_pipeline)
 (modules test_expansion_pipeline)
 (libraries latex_parse_lib rest_simple_expander_lib unix yojson))

(test
 (name test_golden_corpus)
 (modules test_golden_corpus)
 (libraries latex_parse_lib rest_simple_expander_lib unix yojson)
 (deps
  ../../specs/rules/l1_golden.yaml
  ../../specs/rules/pilot_v1_golden.yaml
  ../../specs/rules/locale_golden.yaml
  ../../specs/rules/stragglers2_golden.yaml
  ../../specs/rules/l2_approx_golden.yaml
  ../../specs/rules/l2_batch3_golden.yaml
  ../../specs/rules/l2_batch4_golden.yaml
  ../../specs/rules/l5_expl3_tikz_golden.yaml
  ../../specs/rules/l3_text_approx_golden.yaml
  ../../specs/rules/style_golden.yaml
  ../../specs/rules/phase3_golden.yaml
  ../../specs/rules/i18n_qa_golden.yaml
  (source_tree ../../corpora)))

(test
 (name test_validators_expl3)
 (modules test_validators_expl3)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_l1_expl3)
 (modules test_validators_l1_expl3)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_l2_approx)
 (modules test_validators_l2_approx)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_l2_batch3)
 (modules test_validators_l2_batch3)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_audit_regression)
 (modules test_audit_regression)
 (libraries latex_parse_lib unix))

(test
 (name test_validators_l2_batch4)
 (modules test_validators_l2_batch4)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_l5_expl3_tikz)
 (modules test_validators_l5_expl3_tikz)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_l3_text_approx)
 (modules test_validators_l3_text_approx)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_style)
 (modules test_validators_style)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_validators_phase3)
 (modules test_validators_phase3)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_log_parser)
 (modules test_log_parser)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_build_log_integration)
 (modules test_build_log_integration)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_language_profile)
 (modules test_language_profile)
 (deps
  (glob_files ../../corpora/lint/language_profile/*.tex))
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_repair_monotonic)
 (modules test_repair_monotonic)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_parser_corpus)
 (modules test_parser_corpus)
 (libraries latex_parse_lib unix)
 (deps
  (source_tree ../../corpora)))

(test
 (name test_validator_dag)
 (modules test_validator_dag)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_layer_sync)
 (modules test_layer_sync)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_section_rebalance)
 (modules test_section_rebalance)
 (libraries latex_parse_lib))

(test
 (name test_lockfree_queue)
 (modules test_lockfree_queue)
 (libraries latex_parse_lib unix))

(test
 (name test_unicode_split)
 (modules test_unicode_split)
 (libraries latex_parse_lib))

(test
 (name test_l2_gate)
 (modules test_l2_gate)
 (libraries latex_parse_lib unix))

(test
 (name test_parser_l2_envs)
 (modules test_parser_l2_envs)
 (libraries latex_parse_lib))

(test
 (name test_tokenizer_utf8)
 (modules test_tokenizer_utf8)
 (libraries latex_parse_lib))

(test
 (name test_incremental_nlp)
 (modules test_incremental_nlp)
 (libraries latex_parse_lib))

(test
 (name test_throughput)
 (modules test_throughput)
 (libraries latex_parse_lib unix))

(test
 (name test_cache_key)
 (modules test_cache_key)
 (libraries latex_parse_lib))

(test
 (name test_semantic_state)
 (modules test_semantic_state)
 (libraries latex_parse_lib unix threads))

(test
 (name test_evidence_scoring)
 (modules test_evidence_scoring)
 (libraries latex_parse_lib))

(test
 (name test_event_bus)
 (modules test_event_bus)
 (libraries latex_parse_lib))

(test
 (name test_suffix_array)
 (modules test_suffix_array)
 (libraries latex_parse_lib))

(test
 (name test_float_tracking)
 (modules test_float_tracking)
 (libraries latex_parse_lib))

(test
 (name test_sentence_split)
 (modules test_sentence_split)
 (libraries latex_parse_lib))

(test
 (name test_xxh64)
 (modules test_xxh64)
 (libraries latex_parse_lib))

(test
 (name test_ipc)
 (modules test_ipc)
 (libraries latex_parse_lib unix))

(test
 (name test_i18n_qa)
 (modules test_i18n_qa)
 (libraries latex_parse_lib unix)
 (deps
  (source_tree ../../corpora)))

(test
 (name test_pdf_reader)
 (modules test_pdf_reader)
 (libraries latex_parse_lib test_helpers test_binary_gen unix))

(test
 (name test_jpeg_reader)
 (modules test_jpeg_reader)
 (libraries latex_parse_lib test_helpers test_binary_gen unix))

(test
 (name test_png_reader)
 (modules test_png_reader)
 (libraries latex_parse_lib test_helpers test_binary_gen unix))

(test
 (name test_file_context)
 (modules test_file_context)
 (libraries latex_parse_lib unix threads))

(test
 (name test_font_reader)
 (modules test_font_reader)
 (libraries latex_parse_lib test_helpers test_binary_gen unix))

(test
 (name test_file_analyzer)
 (modules test_file_analyzer)
 (libraries latex_parse_lib test_helpers test_binary_gen unix))

(test
 (name test_validators_l3_file)
 (modules test_validators_l3_file)
 (libraries latex_parse_lib test_helpers test_binary_gen unix threads))

(test
 (name test_ml_confidence)
 (modules test_ml_confidence)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_chunk_store)
 (modules test_chunk_store)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_edf_scheduler)
 (modules test_edf_scheduler)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_ml_client)
 (modules test_ml_client)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_incremental_integration)
 (modules test_incremental_integration)
 (libraries latex_parse_lib test_helpers unix))

(test
 (name test_integration_e2e)
 (modules test_integration_e2e)
 (libraries latex_parse_lib test_helpers unix threads))

(test
 (name test_mutation_baseline)
 (modules test_mutation_baseline)
 (libraries latex_parse_lib unix str)
 (deps
  (source_tree .)))

(test
 (name test_fuzz_parser)
 (modules test_fuzz_parser)
 (libraries latex_parse_lib))

(test
 (name test_fuzz_binary)
 (modules test_fuzz_binary)
 (libraries latex_parse_lib test_binary_gen unix))

(test
 (name test_long_stress)
 (modules test_long_stress)
 (libraries latex_parse_lib unix)
 (enabled_if false))
